// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`support Cloud 1`] = `
.c1 {
  box-sizing: border-box;
  max-width: 2000px;
  padding-left: 40px;
  padding-right: 40px;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c9 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c12 {
  box-sizing: border-box;
}

.c23 {
  box-sizing: border-box;
  margin-top: 32px;
}

.c2 {
  display: flex;
}

.c5 {
  display: flex;
  align-items: center;
}

.c15 {
  display: flex;
  align-items: center;
  justify-content: start;
}

.c29 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c17 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c24 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  margin-right: 8px;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
}

.c18 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
  margin: 0px;
}

.c21 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c22 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c25 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c26 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  font-weight: 600;
}

.c33 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  margin: 0px;
  margin-bottom: 4px;
  margin-left: 8px;
}

.c0 {
  display: flex;
  flex-direction: column;
  flex: 1;
}

.c10 {
  border: 1px solid rgba(255,255,255,0.18);
  border-radius: 4px;
}

.c13 {
  padding: 24px;
}

.c13:not(:last-child) {
  border-bottom: 1px solid rgba(255,255,255,0.18);
}

.c6 {
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c8 {
  white-space: nowrap;
}

.c3 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c3::after {
  content: ' ';
  padding-bottom: 24px;
}

.c19 {
  padding-left: 40px;
}

.c28 {
  width: 100vw;
  margin-left: -40px;
}

.c16 {
  line-height: 0;
  padding: 8px;
  border-radius: 8px;
  margin-right: 16px;
  background: rgba(255,255,255,0.07);
}

.c31 {
  width: 320px;
}

.c32 {
  justify-content: space-between;
  flex-wrap: wrap;
  max-width: 70%;
}

.c20 {
  margin-bottom: 16px;
}

.c34 {
  display: block;
  color: #FFFFFF;
  border-radius: 4px;
  text-decoration: none;
  margin-bottom: 8px;
  padding: 4px 8px;
  transition: all 0.3s;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
}

.c34:hover,
.c34:focus {
  background: rgba(255,255,255,0.07);
}

.c27 {
  display: inline;
}

@media screen and (max-width:656px) {
  .c11 {
    border: none;
  }
}

@media screen and (max-width:656px) {
  .c14 {
    border: none !important;
    padding-left: 0;
    padding-bottom: 0;
  }
}

@media screen and (max-width:656px) {
  .c28 {
    border-bottom: 1px solid rgba(255,255,255,0.18);
  }
}

@media screen and (max-width:656px) {
  .c16 {
    background: transparent;
    margin-right: 4px;
  }
}

@media screen and (max-width:656px) {
  .c30 {
    flex-direction: column;
    align-items: flex-start;
  }
}

@media screen and (max-width:656px) {
  .c31 {
    margin-left: 40px;
    margin-top: 8px;
  }
}

@media screen and (max-width:1056px) {
  .c32 {
    max-width: 100%;
  }
}

@media screen and (max-width:656px) {
  .c32 {
    flex-direction: column;
    gap: 16px;
    margin-bottom: 16px;
  }
}

@media screen and (max-width:656px) {
  .c20 {
    flex-direction: column;
    padding-left: 8px;
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2 c3"
  >
    <div
      class="c4 c5 c6"
    >
      <div
        class="c7 c8"
      >
        Help & Support
      </div>
    </div>
    <div
      class="c9 c10 c11"
    >
      <div
        class="c12 c13 c14"
      >
        <div
          class="c12 c15"
        >
          <div
            class="c12 c16"
          >
            <span
              class="c17 icon icon-cluster"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  clip-rule="evenodd"
                  d="M9 8.25C9.16851 8.25 9.33377 8.23611 9.4947 8.2094L10.1347 9.65022C9.44331 10.1998 9 11.0481 9 12C9 12.4933 9.11905 12.9587 9.32998 13.3692L6.92314 15.5095C6.44516 15.1878 5.86951 15 5.25 15C3.59315 15 2.25 16.3431 2.25 18C2.25 19.6569 3.59315 21 5.25 21C6.90685 21 8.25 19.6569 8.25 18C8.25 17.5066 8.1309 17.041 7.91987 16.6305L10.3266 14.4903C10.8046 14.8121 11.3804 15 12 15C12.6901 15 13.3258 14.767 13.8326 14.3754L15.9961 16.0582C15.8378 16.4235 15.75 16.8265 15.75 17.25C15.75 18.9069 17.0931 20.25 18.75 20.25C20.4069 20.25 21.75 18.9069 21.75 17.25C21.75 15.5931 20.4069 14.25 18.75 14.25C18.06 14.25 17.4243 14.483 16.9175 14.8746L14.754 13.1917C14.9123 12.8264 15 12.4235 15 12C15 11.9303 14.9976 11.8611 14.9929 11.7925L16.2309 11.3799C16.7656 12.2045 17.6941 12.75 18.75 12.75C20.4069 12.75 21.75 11.4069 21.75 9.75C21.75 8.09315 20.4069 6.75 18.75 6.75C17.0931 6.75 15.75 8.09315 15.75 9.75C15.75 9.81947 15.7524 9.88839 15.757 9.95669L14.5186 10.3695C13.9839 9.54525 13.0556 9 12 9C11.8315 9 11.6662 9.01389 11.5053 9.0406L10.8652 7.5998C11.5567 7.05021 12 6.20188 12 5.25C12 3.59315 10.6569 2.25 9 2.25C7.34315 2.25 6 3.59315 6 5.25C6 6.90685 7.34315 8.25 9 8.25ZM9 3.75C8.17157 3.75 7.5 4.42157 7.5 5.25C7.5 6.07843 8.17157 6.75 9 6.75C9.20894 6.75 9.40791 6.70728 9.58864 6.63009C9.59553 6.62678 9.6025 6.62356 9.60954 6.62043C9.61626 6.61745 9.62299 6.61457 9.62975 6.6118C10.1436 6.37378 10.5 5.85352 10.5 5.25C10.5 4.42157 9.82843 3.75 9 3.75ZM17.25 17.25C17.25 16.9123 17.3616 16.6007 17.5499 16.35C17.5535 16.3457 17.5571 16.3413 17.5606 16.3369C17.5626 16.3344 17.5645 16.332 17.5664 16.3295C17.5717 16.3227 17.5769 16.3158 17.5819 16.3089C17.8568 15.968 18.278 15.75 18.75 15.75C19.5784 15.75 20.25 16.4216 20.25 17.25C20.25 18.0784 19.5784 18.75 18.75 18.75C17.9216 18.75 17.25 18.0784 17.25 17.25ZM17.3331 10.2437L17.3269 10.224L17.3202 10.2048C17.2746 10.0613 17.25 9.90854 17.25 9.75C17.25 8.92157 17.9216 8.25 18.75 8.25C19.5784 8.25 20.25 8.92157 20.25 9.75C20.25 10.5784 19.5784 11.25 18.75 11.25C18.0945 11.25 17.5373 10.8296 17.3331 10.2437ZM11.3749 10.636C10.8586 10.873 10.5 11.3946 10.5 12C10.5 12.3758 10.6382 12.7194 10.8666 12.9826L10.8786 12.9958L10.8906 13.0096C11.1649 13.3109 11.5604 13.5 12 13.5C12.4722 13.5 12.8934 13.2818 13.1684 12.9408C13.1733 12.9339 13.1784 12.9271 13.1837 12.9204C13.189 12.9135 13.1945 12.9068 13.2 12.9001C13.3884 12.6494 13.5 12.3377 13.5 12C13.5 11.8372 13.4741 11.6805 13.4261 11.5337L13.4232 11.5252L13.4204 11.5167C13.2193 10.9254 12.6593 10.5 12 10.5C11.7892 10.5 11.5885 10.5435 11.4065 10.622L11.3903 10.6294L11.3749 10.636ZM3.75 18C3.75 17.1716 4.42157 16.5 5.25 16.5C6.07843 16.5 6.75 17.1716 6.75 18C6.75 18.8284 6.07843 19.5 5.25 19.5C4.42157 19.5 3.75 18.8284 3.75 18Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <h2
            class="c18"
          >
            Cluster Information
          </h2>
        </div>
      </div>
      <div
        class="c12 c13 c14 c19"
      >
        <div
          class="c12 c2 c20"
        >
          <div
            class="c21"
            style="width: 136px;"
          >
            Cluster Name
            :
          </div>
          <div
            class="c22"
          >
            test
          </div>
        </div>
        <div
          class="c12 c2 c20"
        >
          <div
            class="c21"
            style="width: 136px;"
          >
            Teleport Version
            :
          </div>
          <div
            class="c22"
          >
            13.4.0-dev
          </div>
        </div>
        <div
          class="c12 c2 c20"
        >
          <div
            class="c21"
            style="width: 136px;"
          >
            Public Address
            :
          </div>
          <div
            class="c22"
          >
            localhost:3080
          </div>
        </div>
      </div>
      <div
        class="c23 c2"
      >
        <span
          class="c24 icon icon-info"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M11.625 8.8125C12.1428 8.8125 12.5625 8.39277 12.5625 7.875C12.5625 7.35723 12.1428 6.9375 11.625 6.9375C11.1072 6.9375 10.6875 7.35723 10.6875 7.875C10.6875 8.39277 11.1072 8.8125 11.625 8.8125Z"
            />
            <path
              d="M10.5 11.25C10.5 10.8358 10.8358 10.5 11.25 10.5C11.6478 10.5 12.0294 10.658 12.3107 10.9393C12.592 11.2206 12.75 11.6022 12.75 12V15.75C13.1642 15.75 13.5 16.0858 13.5 16.5C13.5 16.9142 13.1642 17.25 12.75 17.25C12.3522 17.25 11.9706 17.092 11.6893 16.8107C11.408 16.5294 11.25 16.1478 11.25 15.75V12C10.8358 12 10.5 11.6642 10.5 11.25Z"
            />
            <path
              clip-rule="evenodd"
              d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <div
          class="c25"
        >
          Looking for
           
          <div
            class="c26 c27"
            font-weight="bold"
          >
            Scheduled Upgrades?
          </div>
           
          It is now in
           
          <a
            href="/web/clusters/test/manage"
          >
            Cluster Management
          </a>
           
          page.
        </div>
      </div>
    </div>
    <div
      class="c28"
    />
    <div
      class="c9 c10 c11"
    >
      <div
        class="c12 c13 c14"
      >
        <div
          class="c12 c29 c30"
        >
          <div
            class="c12 c5"
          >
            <div
              class="c12 c16"
            >
              <span
                class="c17 icon icon-question"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M8.25 10.125C8.25 8.17049 10.0264 6.75 12 6.75C13.9736 6.75 15.75 8.17049 15.75 10.125C15.75 11.8276 14.402 13.1249 12.75 13.4311V13.5C12.75 13.9142 12.4142 14.25 12 14.25C11.5858 14.25 11.25 13.9142 11.25 13.5V12.75C11.25 12.3358 11.5858 12 12 12C13.3395 12 14.25 11.0692 14.25 10.125C14.25 9.18076 13.3395 8.25 12 8.25C10.6605 8.25 9.75 9.18076 9.75 10.125V10.5C9.75 10.9142 9.41421 11.25 9 11.25C8.58579 11.25 8.25 10.9142 8.25 10.5V10.125Z"
                  />
                  <path
                    d="M12 17.8125C12.5178 17.8125 12.9375 17.3928 12.9375 16.875C12.9375 16.3572 12.5178 15.9375 12 15.9375C11.4822 15.9375 11.0625 16.3572 11.0625 16.875C11.0625 17.3928 11.4822 17.8125 12 17.8125Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <h2
              class="c18"
            >
              Support and Resource Pages
            </h2>
          </div>
          <div
            class="c12 c31"
          />
        </div>
      </div>
      <div
        class="c12 c13 c14 c19"
      >
        <div
          class="c12 c2 c32"
        >
          <div
            class="c12"
          >
            <h3
              class="c33"
            >
              Support
            </h3>
            <a
              class="c34"
              href="https://github.com/gravitational/teleport/discussions"
              rel="noreferrer"
              target="_blank"
            >
              Ask the Community Questions
            </a>
            <a
              class="c34"
              href="https://github.com/gravitational/teleport/issues/new/choose"
              rel="noreferrer"
              target="_blank"
            >
              Request a New Feature
            </a>
            <a
              class="c34"
              href="mailto:support@goteleport.com"
              rel="noreferrer"
              target="_blank"
            >
              Send Product Feedback
            </a>
          </div>
          <div
            class="c12"
          >
            <h3
              class="c33"
            >
              Resources
            </h3>
            <a
              class="c34"
              href="https://goteleport.com/docs/get-started/?product=teleport&version=oss_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              Get Started Guide
            </a>
            <a
              class="c34"
              href="https://goteleport.com/docs/connect-your-client/tsh/?product=teleport&version=oss_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              tsh User Guide
            </a>
            <a
              class="c34"
              href="https://goteleport.com/docs/admin-guides/management/admin/?product=teleport&version=oss_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              Admin Guides
            </a>
            <a
              class="c34"
              href="https://goteleport.com/docs/admin-guides/management/admin/troubleshooting/?product=teleport&version=oss_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              Troubleshooting Guide
            </a>
            <a
              class="c34"
              href="/web/downloads"
              rel="noreferrer"
            >
              Download Page
            </a>
            <a
              class="c34"
              href="https://goteleport.com/docs/faq?product=teleport&version=oss_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              FAQ
            </a>
          </div>
          <div
            class="c12"
          >
            <h3
              class="c33"
            >
              Updates
            </h3>
            <a
              class="c34"
              href="https://goteleport.com/docs/changelog?product=teleport&version=oss_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              Product Changelog
            </a>
            <a
              class="c34"
              href="https://goteleport.com/blog/"
              rel="noreferrer"
              target="_blank"
            >
              Teleport Blog
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`support Enterprise 1`] = `
.c1 {
  box-sizing: border-box;
  max-width: 2000px;
  padding-left: 40px;
  padding-right: 40px;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c9 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c12 {
  box-sizing: border-box;
}

.c2 {
  display: flex;
}

.c5 {
  display: flex;
  align-items: center;
}

.c15 {
  display: flex;
  align-items: center;
  justify-content: start;
}

.c24 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c17 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
}

.c18 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
  margin: 0px;
}

.c21 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c22 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c28 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  margin: 0px;
  margin-bottom: 4px;
  margin-left: 8px;
}

.c0 {
  display: flex;
  flex-direction: column;
  flex: 1;
}

.c10 {
  border: 1px solid rgba(255,255,255,0.18);
  border-radius: 4px;
}

.c13 {
  padding: 24px;
}

.c13:not(:last-child) {
  border-bottom: 1px solid rgba(255,255,255,0.18);
}

.c6 {
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c8 {
  white-space: nowrap;
}

.c3 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c3::after {
  content: ' ';
  padding-bottom: 24px;
}

.c19 {
  padding-left: 40px;
}

.c23 {
  width: 100vw;
  margin-left: -40px;
}

.c16 {
  line-height: 0;
  padding: 8px;
  border-radius: 8px;
  margin-right: 16px;
  background: rgba(255,255,255,0.07);
}

.c26 {
  width: 320px;
}

.c27 {
  justify-content: space-between;
  flex-wrap: wrap;
  max-width: 70%;
}

.c20 {
  margin-bottom: 16px;
}

.c29 {
  display: block;
  color: #FFFFFF;
  border-radius: 4px;
  text-decoration: none;
  margin-bottom: 8px;
  padding: 4px 8px;
  transition: all 0.3s;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
}

.c29:hover,
.c29:focus {
  background: rgba(255,255,255,0.07);
}

@media screen and (max-width:656px) {
  .c11 {
    border: none;
  }
}

@media screen and (max-width:656px) {
  .c14 {
    border: none !important;
    padding-left: 0;
    padding-bottom: 0;
  }
}

@media screen and (max-width:656px) {
  .c23 {
    border-bottom: 1px solid rgba(255,255,255,0.18);
  }
}

@media screen and (max-width:656px) {
  .c16 {
    background: transparent;
    margin-right: 4px;
  }
}

@media screen and (max-width:656px) {
  .c25 {
    flex-direction: column;
    align-items: flex-start;
  }
}

@media screen and (max-width:656px) {
  .c26 {
    margin-left: 40px;
    margin-top: 8px;
  }
}

@media screen and (max-width:1056px) {
  .c27 {
    max-width: 100%;
  }
}

@media screen and (max-width:656px) {
  .c27 {
    flex-direction: column;
    gap: 16px;
    margin-bottom: 16px;
  }
}

@media screen and (max-width:656px) {
  .c20 {
    flex-direction: column;
    padding-left: 8px;
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2 c3"
  >
    <div
      class="c4 c5 c6"
    >
      <div
        class="c7 c8"
      >
        Help & Support
      </div>
    </div>
    <div
      class="c9 c10 c11"
    >
      <div
        class="c12 c13 c14"
      >
        <div
          class="c12 c15"
        >
          <div
            class="c12 c16"
          >
            <span
              class="c17 icon icon-cluster"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  clip-rule="evenodd"
                  d="M9 8.25C9.16851 8.25 9.33377 8.23611 9.4947 8.2094L10.1347 9.65022C9.44331 10.1998 9 11.0481 9 12C9 12.4933 9.11905 12.9587 9.32998 13.3692L6.92314 15.5095C6.44516 15.1878 5.86951 15 5.25 15C3.59315 15 2.25 16.3431 2.25 18C2.25 19.6569 3.59315 21 5.25 21C6.90685 21 8.25 19.6569 8.25 18C8.25 17.5066 8.1309 17.041 7.91987 16.6305L10.3266 14.4903C10.8046 14.8121 11.3804 15 12 15C12.6901 15 13.3258 14.767 13.8326 14.3754L15.9961 16.0582C15.8378 16.4235 15.75 16.8265 15.75 17.25C15.75 18.9069 17.0931 20.25 18.75 20.25C20.4069 20.25 21.75 18.9069 21.75 17.25C21.75 15.5931 20.4069 14.25 18.75 14.25C18.06 14.25 17.4243 14.483 16.9175 14.8746L14.754 13.1917C14.9123 12.8264 15 12.4235 15 12C15 11.9303 14.9976 11.8611 14.9929 11.7925L16.2309 11.3799C16.7656 12.2045 17.6941 12.75 18.75 12.75C20.4069 12.75 21.75 11.4069 21.75 9.75C21.75 8.09315 20.4069 6.75 18.75 6.75C17.0931 6.75 15.75 8.09315 15.75 9.75C15.75 9.81947 15.7524 9.88839 15.757 9.95669L14.5186 10.3695C13.9839 9.54525 13.0556 9 12 9C11.8315 9 11.6662 9.01389 11.5053 9.0406L10.8652 7.5998C11.5567 7.05021 12 6.20188 12 5.25C12 3.59315 10.6569 2.25 9 2.25C7.34315 2.25 6 3.59315 6 5.25C6 6.90685 7.34315 8.25 9 8.25ZM9 3.75C8.17157 3.75 7.5 4.42157 7.5 5.25C7.5 6.07843 8.17157 6.75 9 6.75C9.20894 6.75 9.40791 6.70728 9.58864 6.63009C9.59553 6.62678 9.6025 6.62356 9.60954 6.62043C9.61626 6.61745 9.62299 6.61457 9.62975 6.6118C10.1436 6.37378 10.5 5.85352 10.5 5.25C10.5 4.42157 9.82843 3.75 9 3.75ZM17.25 17.25C17.25 16.9123 17.3616 16.6007 17.5499 16.35C17.5535 16.3457 17.5571 16.3413 17.5606 16.3369C17.5626 16.3344 17.5645 16.332 17.5664 16.3295C17.5717 16.3227 17.5769 16.3158 17.5819 16.3089C17.8568 15.968 18.278 15.75 18.75 15.75C19.5784 15.75 20.25 16.4216 20.25 17.25C20.25 18.0784 19.5784 18.75 18.75 18.75C17.9216 18.75 17.25 18.0784 17.25 17.25ZM17.3331 10.2437L17.3269 10.224L17.3202 10.2048C17.2746 10.0613 17.25 9.90854 17.25 9.75C17.25 8.92157 17.9216 8.25 18.75 8.25C19.5784 8.25 20.25 8.92157 20.25 9.75C20.25 10.5784 19.5784 11.25 18.75 11.25C18.0945 11.25 17.5373 10.8296 17.3331 10.2437ZM11.3749 10.636C10.8586 10.873 10.5 11.3946 10.5 12C10.5 12.3758 10.6382 12.7194 10.8666 12.9826L10.8786 12.9958L10.8906 13.0096C11.1649 13.3109 11.5604 13.5 12 13.5C12.4722 13.5 12.8934 13.2818 13.1684 12.9408C13.1733 12.9339 13.1784 12.9271 13.1837 12.9204C13.189 12.9135 13.1945 12.9068 13.2 12.9001C13.3884 12.6494 13.5 12.3377 13.5 12C13.5 11.8372 13.4741 11.6805 13.4261 11.5337L13.4232 11.5252L13.4204 11.5167C13.2193 10.9254 12.6593 10.5 12 10.5C11.7892 10.5 11.5885 10.5435 11.4065 10.622L11.3903 10.6294L11.3749 10.636ZM3.75 18C3.75 17.1716 4.42157 16.5 5.25 16.5C6.07843 16.5 6.75 17.1716 6.75 18C6.75 18.8284 6.07843 19.5 5.25 19.5C4.42157 19.5 3.75 18.8284 3.75 18Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <h2
            class="c18"
          >
            Cluster Information
          </h2>
        </div>
      </div>
      <div
        class="c12 c13 c14 c19"
      >
        <div
          class="c12 c2 c20"
        >
          <div
            class="c21"
            style="width: 136px;"
          >
            Cluster Name
            :
          </div>
          <div
            class="c22"
          >
            test
          </div>
        </div>
        <div
          class="c12 c2 c20"
        >
          <div
            class="c21"
            style="width: 136px;"
          >
            Teleport Version
            :
          </div>
          <div
            class="c22"
          >
            13.4.0-dev
          </div>
        </div>
        <div
          class="c12 c2 c20"
        >
          <div
            class="c21"
            style="width: 136px;"
          >
            Public Address
            :
          </div>
          <div
            class="c22"
          >
            localhost:3080
          </div>
        </div>
        <div
          class="c12 c2 c20"
        >
          <div
            class="c21"
            style="width: 136px;"
          >
            License Expiry
            :
          </div>
          <div
            class="c22"
          >
            2027-05-09 06:52:58
          </div>
        </div>
      </div>
    </div>
    <div
      class="c23"
    />
    <div
      class="c9 c10 c11"
    >
      <div
        class="c12 c13 c14"
      >
        <div
          class="c12 c24 c25"
        >
          <div
            class="c12 c5"
          >
            <div
              class="c12 c16"
            >
              <span
                class="c17 icon icon-question"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M8.25 10.125C8.25 8.17049 10.0264 6.75 12 6.75C13.9736 6.75 15.75 8.17049 15.75 10.125C15.75 11.8276 14.402 13.1249 12.75 13.4311V13.5C12.75 13.9142 12.4142 14.25 12 14.25C11.5858 14.25 11.25 13.9142 11.25 13.5V12.75C11.25 12.3358 11.5858 12 12 12C13.3395 12 14.25 11.0692 14.25 10.125C14.25 9.18076 13.3395 8.25 12 8.25C10.6605 8.25 9.75 9.18076 9.75 10.125V10.5C9.75 10.9142 9.41421 11.25 9 11.25C8.58579 11.25 8.25 10.9142 8.25 10.5V10.125Z"
                  />
                  <path
                    d="M12 17.8125C12.5178 17.8125 12.9375 17.3928 12.9375 16.875C12.9375 16.3572 12.5178 15.9375 12 15.9375C11.4822 15.9375 11.0625 16.3572 11.0625 16.875C11.0625 17.3928 11.4822 17.8125 12 17.8125Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <h2
              class="c18"
            >
              Support and Resource Pages
            </h2>
          </div>
          <div
            class="c12 c26"
          />
        </div>
      </div>
      <div
        class="c12 c13 c14 c19"
      >
        <div
          class="c12 c2 c27"
        >
          <div
            class="c12"
          >
            <h3
              class="c28"
            >
              Support
            </h3>
            <a
              class="c29"
              href="https://support.goteleport.com"
              rel="noreferrer"
              target="_blank"
            >
              Create a Support Ticket
            </a>
            <a
              class="c29"
              href="https://github.com/gravitational/teleport/discussions"
              rel="noreferrer"
              target="_blank"
            >
              Ask the Community Questions
            </a>
            <a
              class="c29"
              href="https://github.com/gravitational/teleport/issues/new/choose"
              rel="noreferrer"
              target="_blank"
            >
              Request a New Feature
            </a>
            <a
              class="c29"
              href="mailto:support@goteleport.com"
              rel="noreferrer"
              target="_blank"
            >
              Send Product Feedback
            </a>
          </div>
          <div
            class="c12"
          >
            <h3
              class="c28"
            >
              Resources
            </h3>
            <a
              class="c29"
              href="https://goteleport.com/docs/get-started/?product=teleport&version=e_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              Get Started Guide
            </a>
            <a
              class="c29"
              href="https://goteleport.com/docs/connect-your-client/tsh/?product=teleport&version=e_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              tsh User Guide
            </a>
            <a
              class="c29"
              href="https://goteleport.com/docs/admin-guides/management/admin/?product=teleport&version=e_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              Admin Guides
            </a>
            <a
              class="c29"
              href="https://goteleport.com/docs/admin-guides/management/admin/troubleshooting/?product=teleport&version=e_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              Troubleshooting Guide
            </a>
            <a
              class="c29"
              href="https://goteleport.com/docs/admin-guides/deploy-a-cluster/"
              rel="noreferrer"
              target="_blank"
            >
              Self-Hosting Teleport
            </a>
            <a
              class="c29"
              href="https://goteleport.com/docs/faq?product=teleport&version=e_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              FAQ
            </a>
          </div>
          <div
            class="c12"
          >
            <h3
              class="c28"
            >
              Updates
            </h3>
            <a
              class="c29"
              href="https://goteleport.com/docs/changelog?product=teleport&version=e_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              Product Changelog
            </a>
            <a
              class="c29"
              href="https://goteleport.com/blog/"
              rel="noreferrer"
              target="_blank"
            >
              Teleport Blog
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`support Enterprise with CTA 1`] = `
.c1 {
  box-sizing: border-box;
  max-width: 2000px;
  padding-left: 40px;
  padding-right: 40px;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c9 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c12 {
  box-sizing: border-box;
}

.c27 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  padding-top: 12px;
  padding-bottom: 12px;
  width: 100%;
}

.c27:hover,
.c27:focus {
  background: #B29DFF;
}

.c27:active {
  background: #C5B6FF;
}

.c27:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c2 {
  display: flex;
}

.c5 {
  display: flex;
  align-items: center;
}

.c15 {
  display: flex;
  align-items: center;
  justify-content: start;
}

.c24 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c17 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
}

.c18 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
  margin: 0px;
}

.c21 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c22 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c30 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  margin: 0px;
  margin-bottom: 4px;
  margin-left: 8px;
}

.c0 {
  display: flex;
  flex-direction: column;
  flex: 1;
}

.c10 {
  border: 1px solid rgba(255,255,255,0.18);
  border-radius: 4px;
}

.c13 {
  padding: 24px;
}

.c13:not(:last-child) {
  border-bottom: 1px solid rgba(255,255,255,0.18);
}

.c28 {
  color: inherit;
  font-weight: 500;
  font-size: 15px;
  margin-right: 10px;
}

.c6 {
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c8 {
  white-space: nowrap;
}

.c3 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c3::after {
  content: ' ';
  padding-bottom: 24px;
}

.c19 {
  padding-left: 40px;
}

.c23 {
  width: 100vw;
  margin-left: -40px;
}

.c16 {
  line-height: 0;
  padding: 8px;
  border-radius: 8px;
  margin-right: 16px;
  background: rgba(255,255,255,0.07);
}

.c26 {
  width: 320px;
}

.c29 {
  justify-content: space-between;
  flex-wrap: wrap;
  max-width: 70%;
}

.c20 {
  margin-bottom: 16px;
}

.c31 {
  display: block;
  color: #FFFFFF;
  border-radius: 4px;
  text-decoration: none;
  margin-bottom: 8px;
  padding: 4px 8px;
  transition: all 0.3s;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
}

.c31:hover,
.c31:focus {
  background: rgba(255,255,255,0.07);
}

@media screen and (max-width:656px) {
  .c11 {
    border: none;
  }
}

@media screen and (max-width:656px) {
  .c14 {
    border: none !important;
    padding-left: 0;
    padding-bottom: 0;
  }
}

@media screen and (max-width:656px) {
  .c23 {
    border-bottom: 1px solid rgba(255,255,255,0.18);
  }
}

@media screen and (max-width:656px) {
  .c16 {
    background: transparent;
    margin-right: 4px;
  }
}

@media screen and (max-width:656px) {
  .c25 {
    flex-direction: column;
    align-items: flex-start;
  }
}

@media screen and (max-width:656px) {
  .c26 {
    margin-left: 40px;
    margin-top: 8px;
  }
}

@media screen and (max-width:1056px) {
  .c29 {
    max-width: 100%;
  }
}

@media screen and (max-width:656px) {
  .c29 {
    flex-direction: column;
    gap: 16px;
    margin-bottom: 16px;
  }
}

@media screen and (max-width:656px) {
  .c20 {
    flex-direction: column;
    padding-left: 8px;
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2 c3"
  >
    <div
      class="c4 c5 c6"
    >
      <div
        class="c7 c8"
      >
        Help & Support
      </div>
    </div>
    <div
      class="c9 c10 c11"
    >
      <div
        class="c12 c13 c14"
      >
        <div
          class="c12 c15"
        >
          <div
            class="c12 c16"
          >
            <span
              class="c17 icon icon-cluster"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  clip-rule="evenodd"
                  d="M9 8.25C9.16851 8.25 9.33377 8.23611 9.4947 8.2094L10.1347 9.65022C9.44331 10.1998 9 11.0481 9 12C9 12.4933 9.11905 12.9587 9.32998 13.3692L6.92314 15.5095C6.44516 15.1878 5.86951 15 5.25 15C3.59315 15 2.25 16.3431 2.25 18C2.25 19.6569 3.59315 21 5.25 21C6.90685 21 8.25 19.6569 8.25 18C8.25 17.5066 8.1309 17.041 7.91987 16.6305L10.3266 14.4903C10.8046 14.8121 11.3804 15 12 15C12.6901 15 13.3258 14.767 13.8326 14.3754L15.9961 16.0582C15.8378 16.4235 15.75 16.8265 15.75 17.25C15.75 18.9069 17.0931 20.25 18.75 20.25C20.4069 20.25 21.75 18.9069 21.75 17.25C21.75 15.5931 20.4069 14.25 18.75 14.25C18.06 14.25 17.4243 14.483 16.9175 14.8746L14.754 13.1917C14.9123 12.8264 15 12.4235 15 12C15 11.9303 14.9976 11.8611 14.9929 11.7925L16.2309 11.3799C16.7656 12.2045 17.6941 12.75 18.75 12.75C20.4069 12.75 21.75 11.4069 21.75 9.75C21.75 8.09315 20.4069 6.75 18.75 6.75C17.0931 6.75 15.75 8.09315 15.75 9.75C15.75 9.81947 15.7524 9.88839 15.757 9.95669L14.5186 10.3695C13.9839 9.54525 13.0556 9 12 9C11.8315 9 11.6662 9.01389 11.5053 9.0406L10.8652 7.5998C11.5567 7.05021 12 6.20188 12 5.25C12 3.59315 10.6569 2.25 9 2.25C7.34315 2.25 6 3.59315 6 5.25C6 6.90685 7.34315 8.25 9 8.25ZM9 3.75C8.17157 3.75 7.5 4.42157 7.5 5.25C7.5 6.07843 8.17157 6.75 9 6.75C9.20894 6.75 9.40791 6.70728 9.58864 6.63009C9.59553 6.62678 9.6025 6.62356 9.60954 6.62043C9.61626 6.61745 9.62299 6.61457 9.62975 6.6118C10.1436 6.37378 10.5 5.85352 10.5 5.25C10.5 4.42157 9.82843 3.75 9 3.75ZM17.25 17.25C17.25 16.9123 17.3616 16.6007 17.5499 16.35C17.5535 16.3457 17.5571 16.3413 17.5606 16.3369C17.5626 16.3344 17.5645 16.332 17.5664 16.3295C17.5717 16.3227 17.5769 16.3158 17.5819 16.3089C17.8568 15.968 18.278 15.75 18.75 15.75C19.5784 15.75 20.25 16.4216 20.25 17.25C20.25 18.0784 19.5784 18.75 18.75 18.75C17.9216 18.75 17.25 18.0784 17.25 17.25ZM17.3331 10.2437L17.3269 10.224L17.3202 10.2048C17.2746 10.0613 17.25 9.90854 17.25 9.75C17.25 8.92157 17.9216 8.25 18.75 8.25C19.5784 8.25 20.25 8.92157 20.25 9.75C20.25 10.5784 19.5784 11.25 18.75 11.25C18.0945 11.25 17.5373 10.8296 17.3331 10.2437ZM11.3749 10.636C10.8586 10.873 10.5 11.3946 10.5 12C10.5 12.3758 10.6382 12.7194 10.8666 12.9826L10.8786 12.9958L10.8906 13.0096C11.1649 13.3109 11.5604 13.5 12 13.5C12.4722 13.5 12.8934 13.2818 13.1684 12.9408C13.1733 12.9339 13.1784 12.9271 13.1837 12.9204C13.189 12.9135 13.1945 12.9068 13.2 12.9001C13.3884 12.6494 13.5 12.3377 13.5 12C13.5 11.8372 13.4741 11.6805 13.4261 11.5337L13.4232 11.5252L13.4204 11.5167C13.2193 10.9254 12.6593 10.5 12 10.5C11.7892 10.5 11.5885 10.5435 11.4065 10.622L11.3903 10.6294L11.3749 10.636ZM3.75 18C3.75 17.1716 4.42157 16.5 5.25 16.5C6.07843 16.5 6.75 17.1716 6.75 18C6.75 18.8284 6.07843 19.5 5.25 19.5C4.42157 19.5 3.75 18.8284 3.75 18Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <h2
            class="c18"
          >
            Cluster Information
          </h2>
        </div>
      </div>
      <div
        class="c12 c13 c14 c19"
      >
        <div
          class="c12 c2 c20"
        >
          <div
            class="c21"
            style="width: 136px;"
          >
            Cluster Name
            :
          </div>
          <div
            class="c22"
          >
            test
          </div>
        </div>
        <div
          class="c12 c2 c20"
        >
          <div
            class="c21"
            style="width: 136px;"
          >
            Teleport Version
            :
          </div>
          <div
            class="c22"
          >
            13.4.0-dev
          </div>
        </div>
        <div
          class="c12 c2 c20"
        >
          <div
            class="c21"
            style="width: 136px;"
          >
            Public Address
            :
          </div>
          <div
            class="c22"
          >
            localhost:3080
          </div>
        </div>
        <div
          class="c12 c2 c20"
        >
          <div
            class="c21"
            style="width: 136px;"
          >
            License Expiry
            :
          </div>
          <div
            class="c22"
          >
            2027-05-09 06:52:58
          </div>
        </div>
      </div>
    </div>
    <div
      class="c23"
    />
    <div
      class="c9 c10 c11"
    >
      <div
        class="c12 c13 c14"
      >
        <div
          class="c12 c24 c25"
        >
          <div
            class="c12 c5"
          >
            <div
              class="c12 c16"
            >
              <span
                class="c17 icon icon-question"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M8.25 10.125C8.25 8.17049 10.0264 6.75 12 6.75C13.9736 6.75 15.75 8.17049 15.75 10.125C15.75 11.8276 14.402 13.1249 12.75 13.4311V13.5C12.75 13.9142 12.4142 14.25 12 14.25C11.5858 14.25 11.25 13.9142 11.25 13.5V12.75C11.25 12.3358 11.5858 12 12 12C13.3395 12 14.25 11.0692 14.25 10.125C14.25 9.18076 13.3395 8.25 12 8.25C10.6605 8.25 9.75 9.18076 9.75 10.125V10.5C9.75 10.9142 9.41421 11.25 9 11.25C8.58579 11.25 8.25 10.9142 8.25 10.5V10.125Z"
                  />
                  <path
                    d="M12 17.8125C12.5178 17.8125 12.9375 17.3928 12.9375 16.875C12.9375 16.3572 12.5178 15.9375 12 15.9375C11.4822 15.9375 11.0625 16.3572 11.0625 16.875C11.0625 17.3928 11.4822 17.8125 12 17.8125Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <h2
              class="c18"
            >
              Support and Resource Pages
            </h2>
          </div>
          <div
            class="c12 c26"
          >
            <a
              class="c27"
              href="https://goteleport.com/r/upgrade-igs?e_4.4.0-dev&utm_campaign=CTA_PREMIUM_SUPPORT"
              kind="primary"
              rel="noreferrer"
              style="text-transform: none;"
              target="blank"
              width="100%"
            >
              <div
                class="c12 c5"
              >
                <span
                  class="c17 c28"
                  data-testid="locked-icon"
                >
                  <svg
                    fill="currentColor"
                    height="20"
                    viewBox="0 0 24 24"
                    width="20"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M9.87868 3.12868C10.4413 2.56607 11.2044 2.25 12 2.25C13.4683 2.25 14.7404 3.29757 15.015 4.64933C15.0975 5.05525 15.4934 5.31746 15.8993 5.23498C16.3053 5.15251 16.5675 4.75659 16.485 4.35067C16.064 2.27868 14.1598 0.75 12 0.75C10.8065 0.75 9.66193 1.22411 8.81802 2.06802C7.97411 2.91193 7.5 4.05653 7.5 5.25V7.5H4.5C3.67157 7.5 3 8.17157 3 9V19.5C3 20.3284 3.67157 21 4.5 21H19.5C20.3284 21 21 20.3284 21 19.5V9C21 8.17157 20.3284 7.5 19.5 7.5H9V5.25C9 4.45435 9.31607 3.69129 9.87868 3.12868ZM4.5 9V19.5H19.5V9H4.5Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                Unlock Premium Support w/Enterprise
              </div>
            </a>
          </div>
        </div>
      </div>
      <div
        class="c12 c13 c14 c19"
      >
        <div
          class="c12 c2 c29"
        >
          <div
            class="c12"
          >
            <h3
              class="c30"
            >
              Support
            </h3>
            <a
              class="c31"
              href="https://github.com/gravitational/teleport/discussions"
              rel="noreferrer"
              target="_blank"
            >
              Ask the Community Questions
            </a>
            <a
              class="c31"
              href="https://github.com/gravitational/teleport/issues/new/choose"
              rel="noreferrer"
              target="_blank"
            >
              Request a New Feature
            </a>
            <a
              class="c31"
              href="mailto:support@goteleport.com"
              rel="noreferrer"
              target="_blank"
            >
              Send Product Feedback
            </a>
          </div>
          <div
            class="c12"
          >
            <h3
              class="c30"
            >
              Resources
            </h3>
            <a
              class="c31"
              href="https://goteleport.com/docs/get-started/?product=teleport&version=e_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              Get Started Guide
            </a>
            <a
              class="c31"
              href="https://goteleport.com/docs/connect-your-client/tsh/?product=teleport&version=e_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              tsh User Guide
            </a>
            <a
              class="c31"
              href="https://goteleport.com/docs/admin-guides/management/admin/?product=teleport&version=e_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              Admin Guides
            </a>
            <a
              class="c31"
              href="https://goteleport.com/docs/admin-guides/management/admin/troubleshooting/?product=teleport&version=e_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              Troubleshooting Guide
            </a>
            <a
              class="c31"
              href="https://goteleport.com/docs/admin-guides/deploy-a-cluster/"
              rel="noreferrer"
              target="_blank"
            >
              Self-Hosting Teleport
            </a>
            <a
              class="c31"
              href="https://goteleport.com/docs/faq?product=teleport&version=e_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              FAQ
            </a>
          </div>
          <div
            class="c12"
          >
            <h3
              class="c30"
            >
              Updates
            </h3>
            <a
              class="c31"
              href="https://goteleport.com/docs/changelog?product=teleport&version=e_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              Product Changelog
            </a>
            <a
              class="c31"
              href="https://goteleport.com/blog/"
              rel="noreferrer"
              target="_blank"
            >
              Teleport Blog
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`support OSS 1`] = `
.c1 {
  box-sizing: border-box;
  max-width: 2000px;
  padding-left: 40px;
  padding-right: 40px;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c9 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c12 {
  box-sizing: border-box;
}

.c2 {
  display: flex;
}

.c5 {
  display: flex;
  align-items: center;
}

.c15 {
  display: flex;
  align-items: center;
  justify-content: start;
}

.c24 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c17 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
}

.c18 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
  margin: 0px;
}

.c21 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c22 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c28 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  margin: 0px;
  margin-bottom: 4px;
  margin-left: 8px;
}

.c0 {
  display: flex;
  flex-direction: column;
  flex: 1;
}

.c10 {
  border: 1px solid rgba(255,255,255,0.18);
  border-radius: 4px;
}

.c13 {
  padding: 24px;
}

.c13:not(:last-child) {
  border-bottom: 1px solid rgba(255,255,255,0.18);
}

.c6 {
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c8 {
  white-space: nowrap;
}

.c3 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c3::after {
  content: ' ';
  padding-bottom: 24px;
}

.c19 {
  padding-left: 40px;
}

.c23 {
  width: 100vw;
  margin-left: -40px;
}

.c16 {
  line-height: 0;
  padding: 8px;
  border-radius: 8px;
  margin-right: 16px;
  background: rgba(255,255,255,0.07);
}

.c26 {
  width: 320px;
}

.c27 {
  justify-content: space-between;
  flex-wrap: wrap;
  max-width: 70%;
}

.c20 {
  margin-bottom: 16px;
}

.c29 {
  display: block;
  color: #FFFFFF;
  border-radius: 4px;
  text-decoration: none;
  margin-bottom: 8px;
  padding: 4px 8px;
  transition: all 0.3s;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
}

.c29:hover,
.c29:focus {
  background: rgba(255,255,255,0.07);
}

@media screen and (max-width:656px) {
  .c11 {
    border: none;
  }
}

@media screen and (max-width:656px) {
  .c14 {
    border: none !important;
    padding-left: 0;
    padding-bottom: 0;
  }
}

@media screen and (max-width:656px) {
  .c23 {
    border-bottom: 1px solid rgba(255,255,255,0.18);
  }
}

@media screen and (max-width:656px) {
  .c16 {
    background: transparent;
    margin-right: 4px;
  }
}

@media screen and (max-width:656px) {
  .c25 {
    flex-direction: column;
    align-items: flex-start;
  }
}

@media screen and (max-width:656px) {
  .c26 {
    margin-left: 40px;
    margin-top: 8px;
  }
}

@media screen and (max-width:1056px) {
  .c27 {
    max-width: 100%;
  }
}

@media screen and (max-width:656px) {
  .c27 {
    flex-direction: column;
    gap: 16px;
    margin-bottom: 16px;
  }
}

@media screen and (max-width:656px) {
  .c20 {
    flex-direction: column;
    padding-left: 8px;
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2 c3"
  >
    <div
      class="c4 c5 c6"
    >
      <div
        class="c7 c8"
      >
        Help & Support
      </div>
    </div>
    <div
      class="c9 c10 c11"
    >
      <div
        class="c12 c13 c14"
      >
        <div
          class="c12 c15"
        >
          <div
            class="c12 c16"
          >
            <span
              class="c17 icon icon-cluster"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  clip-rule="evenodd"
                  d="M9 8.25C9.16851 8.25 9.33377 8.23611 9.4947 8.2094L10.1347 9.65022C9.44331 10.1998 9 11.0481 9 12C9 12.4933 9.11905 12.9587 9.32998 13.3692L6.92314 15.5095C6.44516 15.1878 5.86951 15 5.25 15C3.59315 15 2.25 16.3431 2.25 18C2.25 19.6569 3.59315 21 5.25 21C6.90685 21 8.25 19.6569 8.25 18C8.25 17.5066 8.1309 17.041 7.91987 16.6305L10.3266 14.4903C10.8046 14.8121 11.3804 15 12 15C12.6901 15 13.3258 14.767 13.8326 14.3754L15.9961 16.0582C15.8378 16.4235 15.75 16.8265 15.75 17.25C15.75 18.9069 17.0931 20.25 18.75 20.25C20.4069 20.25 21.75 18.9069 21.75 17.25C21.75 15.5931 20.4069 14.25 18.75 14.25C18.06 14.25 17.4243 14.483 16.9175 14.8746L14.754 13.1917C14.9123 12.8264 15 12.4235 15 12C15 11.9303 14.9976 11.8611 14.9929 11.7925L16.2309 11.3799C16.7656 12.2045 17.6941 12.75 18.75 12.75C20.4069 12.75 21.75 11.4069 21.75 9.75C21.75 8.09315 20.4069 6.75 18.75 6.75C17.0931 6.75 15.75 8.09315 15.75 9.75C15.75 9.81947 15.7524 9.88839 15.757 9.95669L14.5186 10.3695C13.9839 9.54525 13.0556 9 12 9C11.8315 9 11.6662 9.01389 11.5053 9.0406L10.8652 7.5998C11.5567 7.05021 12 6.20188 12 5.25C12 3.59315 10.6569 2.25 9 2.25C7.34315 2.25 6 3.59315 6 5.25C6 6.90685 7.34315 8.25 9 8.25ZM9 3.75C8.17157 3.75 7.5 4.42157 7.5 5.25C7.5 6.07843 8.17157 6.75 9 6.75C9.20894 6.75 9.40791 6.70728 9.58864 6.63009C9.59553 6.62678 9.6025 6.62356 9.60954 6.62043C9.61626 6.61745 9.62299 6.61457 9.62975 6.6118C10.1436 6.37378 10.5 5.85352 10.5 5.25C10.5 4.42157 9.82843 3.75 9 3.75ZM17.25 17.25C17.25 16.9123 17.3616 16.6007 17.5499 16.35C17.5535 16.3457 17.5571 16.3413 17.5606 16.3369C17.5626 16.3344 17.5645 16.332 17.5664 16.3295C17.5717 16.3227 17.5769 16.3158 17.5819 16.3089C17.8568 15.968 18.278 15.75 18.75 15.75C19.5784 15.75 20.25 16.4216 20.25 17.25C20.25 18.0784 19.5784 18.75 18.75 18.75C17.9216 18.75 17.25 18.0784 17.25 17.25ZM17.3331 10.2437L17.3269 10.224L17.3202 10.2048C17.2746 10.0613 17.25 9.90854 17.25 9.75C17.25 8.92157 17.9216 8.25 18.75 8.25C19.5784 8.25 20.25 8.92157 20.25 9.75C20.25 10.5784 19.5784 11.25 18.75 11.25C18.0945 11.25 17.5373 10.8296 17.3331 10.2437ZM11.3749 10.636C10.8586 10.873 10.5 11.3946 10.5 12C10.5 12.3758 10.6382 12.7194 10.8666 12.9826L10.8786 12.9958L10.8906 13.0096C11.1649 13.3109 11.5604 13.5 12 13.5C12.4722 13.5 12.8934 13.2818 13.1684 12.9408C13.1733 12.9339 13.1784 12.9271 13.1837 12.9204C13.189 12.9135 13.1945 12.9068 13.2 12.9001C13.3884 12.6494 13.5 12.3377 13.5 12C13.5 11.8372 13.4741 11.6805 13.4261 11.5337L13.4232 11.5252L13.4204 11.5167C13.2193 10.9254 12.6593 10.5 12 10.5C11.7892 10.5 11.5885 10.5435 11.4065 10.622L11.3903 10.6294L11.3749 10.636ZM3.75 18C3.75 17.1716 4.42157 16.5 5.25 16.5C6.07843 16.5 6.75 17.1716 6.75 18C6.75 18.8284 6.07843 19.5 5.25 19.5C4.42157 19.5 3.75 18.8284 3.75 18Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <h2
            class="c18"
          >
            Cluster Information
          </h2>
        </div>
      </div>
      <div
        class="c12 c13 c14 c19"
      >
        <div
          class="c12 c2 c20"
        >
          <div
            class="c21"
            style="width: 136px;"
          >
            Cluster Name
            :
          </div>
          <div
            class="c22"
          >
            test
          </div>
        </div>
        <div
          class="c12 c2 c20"
        >
          <div
            class="c21"
            style="width: 136px;"
          >
            Teleport Version
            :
          </div>
          <div
            class="c22"
          >
            13.4.0-dev
          </div>
        </div>
        <div
          class="c12 c2 c20"
        >
          <div
            class="c21"
            style="width: 136px;"
          >
            Public Address
            :
          </div>
          <div
            class="c22"
          >
            localhost:3080
          </div>
        </div>
      </div>
    </div>
    <div
      class="c23"
    />
    <div
      class="c9 c10 c11"
    >
      <div
        class="c12 c13 c14"
      >
        <div
          class="c12 c24 c25"
        >
          <div
            class="c12 c5"
          >
            <div
              class="c12 c16"
            >
              <span
                class="c17 icon icon-question"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M8.25 10.125C8.25 8.17049 10.0264 6.75 12 6.75C13.9736 6.75 15.75 8.17049 15.75 10.125C15.75 11.8276 14.402 13.1249 12.75 13.4311V13.5C12.75 13.9142 12.4142 14.25 12 14.25C11.5858 14.25 11.25 13.9142 11.25 13.5V12.75C11.25 12.3358 11.5858 12 12 12C13.3395 12 14.25 11.0692 14.25 10.125C14.25 9.18076 13.3395 8.25 12 8.25C10.6605 8.25 9.75 9.18076 9.75 10.125V10.5C9.75 10.9142 9.41421 11.25 9 11.25C8.58579 11.25 8.25 10.9142 8.25 10.5V10.125Z"
                  />
                  <path
                    d="M12 17.8125C12.5178 17.8125 12.9375 17.3928 12.9375 16.875C12.9375 16.3572 12.5178 15.9375 12 15.9375C11.4822 15.9375 11.0625 16.3572 11.0625 16.875C11.0625 17.3928 11.4822 17.8125 12 17.8125Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <h2
              class="c18"
            >
              Support and Resource Pages
            </h2>
          </div>
          <div
            class="c12 c26"
          />
        </div>
      </div>
      <div
        class="c12 c13 c14 c19"
      >
        <div
          class="c12 c2 c27"
        >
          <div
            class="c12"
          >
            <h3
              class="c28"
            >
              Support
            </h3>
            <a
              class="c29"
              href="https://github.com/gravitational/teleport/discussions"
              rel="noreferrer"
              target="_blank"
            >
              Ask the Community Questions
            </a>
            <a
              class="c29"
              href="https://github.com/gravitational/teleport/issues/new/choose"
              rel="noreferrer"
              target="_blank"
            >
              Request a New Feature
            </a>
            <a
              class="c29"
              href="mailto:support@goteleport.com"
              rel="noreferrer"
              target="_blank"
            >
              Send Product Feedback
            </a>
          </div>
          <div
            class="c12"
          >
            <h3
              class="c28"
            >
              Resources
            </h3>
            <a
              class="c29"
              href="https://goteleport.com/docs/get-started/?product=teleport&version=oss_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              Get Started Guide
            </a>
            <a
              class="c29"
              href="https://goteleport.com/docs/connect-your-client/tsh/?product=teleport&version=oss_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              tsh User Guide
            </a>
            <a
              class="c29"
              href="https://goteleport.com/docs/admin-guides/management/admin/?product=teleport&version=oss_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              Admin Guides
            </a>
            <a
              class="c29"
              href="https://goteleport.com/docs/admin-guides/management/admin/troubleshooting/?product=teleport&version=oss_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              Troubleshooting Guide
            </a>
            <a
              class="c29"
              href="https://goteleport.com/download/"
              rel="noreferrer"
              target="_blank"
            >
              Download Page
            </a>
            <a
              class="c29"
              href="https://goteleport.com/docs/faq?product=teleport&version=oss_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              FAQ
            </a>
          </div>
          <div
            class="c12"
          >
            <h3
              class="c28"
            >
              Updates
            </h3>
            <a
              class="c29"
              href="https://goteleport.com/docs/changelog?product=teleport&version=oss_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              Product Changelog
            </a>
            <a
              class="c29"
              href="https://goteleport.com/blog/"
              rel="noreferrer"
              target="_blank"
            >
              Teleport Blog
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`support OSSWithCTA 1`] = `
.c1 {
  box-sizing: border-box;
  max-width: 2000px;
  padding-left: 40px;
  padding-right: 40px;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c9 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c12 {
  box-sizing: border-box;
}

.c27 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  padding-top: 12px;
  padding-bottom: 12px;
  width: 100%;
}

.c27:hover,
.c27:focus {
  background: #B29DFF;
}

.c27:active {
  background: #C5B6FF;
}

.c27:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c2 {
  display: flex;
}

.c5 {
  display: flex;
  align-items: center;
}

.c15 {
  display: flex;
  align-items: center;
  justify-content: start;
}

.c24 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c17 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
}

.c18 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
  margin: 0px;
}

.c21 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c22 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c30 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  margin: 0px;
  margin-bottom: 4px;
  margin-left: 8px;
}

.c0 {
  display: flex;
  flex-direction: column;
  flex: 1;
}

.c10 {
  border: 1px solid rgba(255,255,255,0.18);
  border-radius: 4px;
}

.c13 {
  padding: 24px;
}

.c13:not(:last-child) {
  border-bottom: 1px solid rgba(255,255,255,0.18);
}

.c28 {
  color: inherit;
  font-weight: 500;
  font-size: 15px;
  margin-right: 10px;
}

.c6 {
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c8 {
  white-space: nowrap;
}

.c3 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c3::after {
  content: ' ';
  padding-bottom: 24px;
}

.c19 {
  padding-left: 40px;
}

.c23 {
  width: 100vw;
  margin-left: -40px;
}

.c16 {
  line-height: 0;
  padding: 8px;
  border-radius: 8px;
  margin-right: 16px;
  background: rgba(255,255,255,0.07);
}

.c26 {
  width: 320px;
}

.c29 {
  justify-content: space-between;
  flex-wrap: wrap;
  max-width: 70%;
}

.c20 {
  margin-bottom: 16px;
}

.c31 {
  display: block;
  color: #FFFFFF;
  border-radius: 4px;
  text-decoration: none;
  margin-bottom: 8px;
  padding: 4px 8px;
  transition: all 0.3s;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
}

.c31:hover,
.c31:focus {
  background: rgba(255,255,255,0.07);
}

@media screen and (max-width:656px) {
  .c11 {
    border: none;
  }
}

@media screen and (max-width:656px) {
  .c14 {
    border: none !important;
    padding-left: 0;
    padding-bottom: 0;
  }
}

@media screen and (max-width:656px) {
  .c23 {
    border-bottom: 1px solid rgba(255,255,255,0.18);
  }
}

@media screen and (max-width:656px) {
  .c16 {
    background: transparent;
    margin-right: 4px;
  }
}

@media screen and (max-width:656px) {
  .c25 {
    flex-direction: column;
    align-items: flex-start;
  }
}

@media screen and (max-width:656px) {
  .c26 {
    margin-left: 40px;
    margin-top: 8px;
  }
}

@media screen and (max-width:1056px) {
  .c29 {
    max-width: 100%;
  }
}

@media screen and (max-width:656px) {
  .c29 {
    flex-direction: column;
    gap: 16px;
    margin-bottom: 16px;
  }
}

@media screen and (max-width:656px) {
  .c20 {
    flex-direction: column;
    padding-left: 8px;
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2 c3"
  >
    <div
      class="c4 c5 c6"
    >
      <div
        class="c7 c8"
      >
        Help & Support
      </div>
    </div>
    <div
      class="c9 c10 c11"
    >
      <div
        class="c12 c13 c14"
      >
        <div
          class="c12 c15"
        >
          <div
            class="c12 c16"
          >
            <span
              class="c17 icon icon-cluster"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  clip-rule="evenodd"
                  d="M9 8.25C9.16851 8.25 9.33377 8.23611 9.4947 8.2094L10.1347 9.65022C9.44331 10.1998 9 11.0481 9 12C9 12.4933 9.11905 12.9587 9.32998 13.3692L6.92314 15.5095C6.44516 15.1878 5.86951 15 5.25 15C3.59315 15 2.25 16.3431 2.25 18C2.25 19.6569 3.59315 21 5.25 21C6.90685 21 8.25 19.6569 8.25 18C8.25 17.5066 8.1309 17.041 7.91987 16.6305L10.3266 14.4903C10.8046 14.8121 11.3804 15 12 15C12.6901 15 13.3258 14.767 13.8326 14.3754L15.9961 16.0582C15.8378 16.4235 15.75 16.8265 15.75 17.25C15.75 18.9069 17.0931 20.25 18.75 20.25C20.4069 20.25 21.75 18.9069 21.75 17.25C21.75 15.5931 20.4069 14.25 18.75 14.25C18.06 14.25 17.4243 14.483 16.9175 14.8746L14.754 13.1917C14.9123 12.8264 15 12.4235 15 12C15 11.9303 14.9976 11.8611 14.9929 11.7925L16.2309 11.3799C16.7656 12.2045 17.6941 12.75 18.75 12.75C20.4069 12.75 21.75 11.4069 21.75 9.75C21.75 8.09315 20.4069 6.75 18.75 6.75C17.0931 6.75 15.75 8.09315 15.75 9.75C15.75 9.81947 15.7524 9.88839 15.757 9.95669L14.5186 10.3695C13.9839 9.54525 13.0556 9 12 9C11.8315 9 11.6662 9.01389 11.5053 9.0406L10.8652 7.5998C11.5567 7.05021 12 6.20188 12 5.25C12 3.59315 10.6569 2.25 9 2.25C7.34315 2.25 6 3.59315 6 5.25C6 6.90685 7.34315 8.25 9 8.25ZM9 3.75C8.17157 3.75 7.5 4.42157 7.5 5.25C7.5 6.07843 8.17157 6.75 9 6.75C9.20894 6.75 9.40791 6.70728 9.58864 6.63009C9.59553 6.62678 9.6025 6.62356 9.60954 6.62043C9.61626 6.61745 9.62299 6.61457 9.62975 6.6118C10.1436 6.37378 10.5 5.85352 10.5 5.25C10.5 4.42157 9.82843 3.75 9 3.75ZM17.25 17.25C17.25 16.9123 17.3616 16.6007 17.5499 16.35C17.5535 16.3457 17.5571 16.3413 17.5606 16.3369C17.5626 16.3344 17.5645 16.332 17.5664 16.3295C17.5717 16.3227 17.5769 16.3158 17.5819 16.3089C17.8568 15.968 18.278 15.75 18.75 15.75C19.5784 15.75 20.25 16.4216 20.25 17.25C20.25 18.0784 19.5784 18.75 18.75 18.75C17.9216 18.75 17.25 18.0784 17.25 17.25ZM17.3331 10.2437L17.3269 10.224L17.3202 10.2048C17.2746 10.0613 17.25 9.90854 17.25 9.75C17.25 8.92157 17.9216 8.25 18.75 8.25C19.5784 8.25 20.25 8.92157 20.25 9.75C20.25 10.5784 19.5784 11.25 18.75 11.25C18.0945 11.25 17.5373 10.8296 17.3331 10.2437ZM11.3749 10.636C10.8586 10.873 10.5 11.3946 10.5 12C10.5 12.3758 10.6382 12.7194 10.8666 12.9826L10.8786 12.9958L10.8906 13.0096C11.1649 13.3109 11.5604 13.5 12 13.5C12.4722 13.5 12.8934 13.2818 13.1684 12.9408C13.1733 12.9339 13.1784 12.9271 13.1837 12.9204C13.189 12.9135 13.1945 12.9068 13.2 12.9001C13.3884 12.6494 13.5 12.3377 13.5 12C13.5 11.8372 13.4741 11.6805 13.4261 11.5337L13.4232 11.5252L13.4204 11.5167C13.2193 10.9254 12.6593 10.5 12 10.5C11.7892 10.5 11.5885 10.5435 11.4065 10.622L11.3903 10.6294L11.3749 10.636ZM3.75 18C3.75 17.1716 4.42157 16.5 5.25 16.5C6.07843 16.5 6.75 17.1716 6.75 18C6.75 18.8284 6.07843 19.5 5.25 19.5C4.42157 19.5 3.75 18.8284 3.75 18Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <h2
            class="c18"
          >
            Cluster Information
          </h2>
        </div>
      </div>
      <div
        class="c12 c13 c14 c19"
      >
        <div
          class="c12 c2 c20"
        >
          <div
            class="c21"
            style="width: 136px;"
          >
            Cluster Name
            :
          </div>
          <div
            class="c22"
          >
            test
          </div>
        </div>
        <div
          class="c12 c2 c20"
        >
          <div
            class="c21"
            style="width: 136px;"
          >
            Teleport Version
            :
          </div>
          <div
            class="c22"
          >
            13.4.0-dev
          </div>
        </div>
        <div
          class="c12 c2 c20"
        >
          <div
            class="c21"
            style="width: 136px;"
          >
            Public Address
            :
          </div>
          <div
            class="c22"
          >
            localhost:3080
          </div>
        </div>
      </div>
    </div>
    <div
      class="c23"
    />
    <div
      class="c9 c10 c11"
    >
      <div
        class="c12 c13 c14"
      >
        <div
          class="c12 c24 c25"
        >
          <div
            class="c12 c5"
          >
            <div
              class="c12 c16"
            >
              <span
                class="c17 icon icon-question"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M8.25 10.125C8.25 8.17049 10.0264 6.75 12 6.75C13.9736 6.75 15.75 8.17049 15.75 10.125C15.75 11.8276 14.402 13.1249 12.75 13.4311V13.5C12.75 13.9142 12.4142 14.25 12 14.25C11.5858 14.25 11.25 13.9142 11.25 13.5V12.75C11.25 12.3358 11.5858 12 12 12C13.3395 12 14.25 11.0692 14.25 10.125C14.25 9.18076 13.3395 8.25 12 8.25C10.6605 8.25 9.75 9.18076 9.75 10.125V10.5C9.75 10.9142 9.41421 11.25 9 11.25C8.58579 11.25 8.25 10.9142 8.25 10.5V10.125Z"
                  />
                  <path
                    d="M12 17.8125C12.5178 17.8125 12.9375 17.3928 12.9375 16.875C12.9375 16.3572 12.5178 15.9375 12 15.9375C11.4822 15.9375 11.0625 16.3572 11.0625 16.875C11.0625 17.3928 11.4822 17.8125 12 17.8125Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <h2
              class="c18"
            >
              Support and Resource Pages
            </h2>
          </div>
          <div
            class="c12 c26"
          >
            <a
              class="c27"
              href="https://goteleport.com/r/upgrade-community?4.4.0-dev&utm_campaign=CTA_PREMIUM_SUPPORT"
              kind="primary"
              rel="noreferrer"
              style="text-transform: none;"
              target="blank"
              width="100%"
            >
              <div
                class="c12 c5"
              >
                <span
                  class="c17 c28"
                  data-testid="locked-icon"
                >
                  <svg
                    fill="currentColor"
                    height="20"
                    viewBox="0 0 24 24"
                    width="20"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M9.87868 3.12868C10.4413 2.56607 11.2044 2.25 12 2.25C13.4683 2.25 14.7404 3.29757 15.015 4.64933C15.0975 5.05525 15.4934 5.31746 15.8993 5.23498C16.3053 5.15251 16.5675 4.75659 16.485 4.35067C16.064 2.27868 14.1598 0.75 12 0.75C10.8065 0.75 9.66193 1.22411 8.81802 2.06802C7.97411 2.91193 7.5 4.05653 7.5 5.25V7.5H4.5C3.67157 7.5 3 8.17157 3 9V19.5C3 20.3284 3.67157 21 4.5 21H19.5C20.3284 21 21 20.3284 21 19.5V9C21 8.17157 20.3284 7.5 19.5 7.5H9V5.25C9 4.45435 9.31607 3.69129 9.87868 3.12868ZM4.5 9V19.5H19.5V9H4.5Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                Unlock Premium Support w/Enterprise
              </div>
            </a>
          </div>
        </div>
      </div>
      <div
        class="c12 c13 c14 c19"
      >
        <div
          class="c12 c2 c29"
        >
          <div
            class="c12"
          >
            <h3
              class="c30"
            >
              Support
            </h3>
            <a
              class="c31"
              href="https://github.com/gravitational/teleport/discussions"
              rel="noreferrer"
              target="_blank"
            >
              Ask the Community Questions
            </a>
            <a
              class="c31"
              href="https://github.com/gravitational/teleport/issues/new/choose"
              rel="noreferrer"
              target="_blank"
            >
              Request a New Feature
            </a>
            <a
              class="c31"
              href="mailto:support@goteleport.com"
              rel="noreferrer"
              target="_blank"
            >
              Send Product Feedback
            </a>
          </div>
          <div
            class="c12"
          >
            <h3
              class="c30"
            >
              Resources
            </h3>
            <a
              class="c31"
              href="https://goteleport.com/docs/get-started/?product=teleport&version=oss_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              Get Started Guide
            </a>
            <a
              class="c31"
              href="https://goteleport.com/docs/connect-your-client/tsh/?product=teleport&version=oss_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              tsh User Guide
            </a>
            <a
              class="c31"
              href="https://goteleport.com/docs/admin-guides/management/admin/?product=teleport&version=oss_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              Admin Guides
            </a>
            <a
              class="c31"
              href="https://goteleport.com/docs/admin-guides/management/admin/troubleshooting/?product=teleport&version=oss_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              Troubleshooting Guide
            </a>
            <a
              class="c31"
              href="https://goteleport.com/download/"
              rel="noreferrer"
              target="_blank"
            >
              Download Page
            </a>
            <a
              class="c31"
              href="https://goteleport.com/docs/faq?product=teleport&version=oss_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              FAQ
            </a>
          </div>
          <div
            class="c12"
          >
            <h3
              class="c30"
            >
              Updates
            </h3>
            <a
              class="c31"
              href="https://goteleport.com/docs/changelog?product=teleport&version=oss_13.4.0-dev"
              rel="noreferrer"
              target="_blank"
            >
              Product Changelog
            </a>
            <a
              class="c31"
              href="https://goteleport.com/blog/"
              rel="noreferrer"
              target="_blank"
            >
              Teleport Blog
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
